# xfce4-mailwatch-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml
doc/: Makefile.am
doc/C/: Makefile.am  xfce4-mailwatch-plugin.html  xfce4-mailwatch-plugin.xml
doc/C/images/: Makefile.am
icons/: Makefile.am  meson.build
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
libmailwatch-core/: Makefile.am  mailwatch-common.c  mailwatch-common.h  mailwatch-mailbox-gmail.c  mailwatch-mailbox-imap.c  mailwatch-mailbox-maildir.c  mailwatch-mailbox-mbox.c  mailwatch-mailbox-mh.c  mailwatch-mailbox-pop3.c  mailwatch-mailbox.h  mailwatch-net-conn.c  mailwatch-net-conn.h  mailwatch-utils.c  mailwatch-utils.h  mailwatch.c  mailwatch.h  meson.build
panel-plugin/: Makefile.am  mailwatch-mailbox-gmail.c  mailwatch-mailbox-imap.c  mailwatch-mailbox-maildir.c  mailwatch-mailbox-mbox.c  mailwatch-mailbox-mh.c  mailwatch-mailbox-pop3.c  mailwatch-mailbox.h  mailwatch-parameters.h  mailwatch-plugin-4.2.c  mailwatch-plugin.c  mailwatch-utils.c  mailwatch-utils.h  mailwatch.c  mailwatch.desktop.in  mailwatch.desktop.in.in  mailwatch.h  meson.build
pixmaps/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.no  nb.po  nb_NO.po  nl.po  (+23 more)
trunk/: ChangeLog  Makefile.am  README
trunk/doc/C/: xfce4-mailwatch-plugin.html  xfce4-mailwatch-plugin.xml
trunk/doc/C/images/: Makefile.am
trunk/libmailwatch-core/: Makefile.am  mailwatch-common.c  mailwatch-common.h  mailwatch-mailbox-imap.c  mailwatch-mailbox-maildir.c  mailwatch-mailbox-mh.c  mailwatch-mailbox-pop3.c  mailwatch-mailbox.h  mailwatch-utils.h  mailwatch.c  mailwatch.h
trunk/panel-plugin/: Makefile.am
trunk/pixmaps/: Makefile.am
trunk/po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ca.po  de.po  el.po  fi.po  gl.po  hu.po  ja.po  lv.po  nb_NO.po  pt_BR.po  ru.po  vi.po  zh_TW.po
