imagesdir = $(datadir)/xfce4/doc/C/images
images_DATA = \
	mailwatch-gmail-settings.png \
	mailwatch-imap-advanced.png \
	mailwatch-imap-new-folders.png \
	mailwatch-imap-settings.png \
	mailwatch-log-window.png \
	mailwatch-mailbox-type.png \
	mailwatch-maildir-settings.png \
	mailwatch-mbox-settings.png \
	mailwatch-mh-settings.png \
	mailwatch-panel-indicator.png \
	mailwatch-pop3-advanced.png \
	mailwatch-pop3-settings.png \
	mailwatch-properties.png

EXTRA_DIST = $(images_DATA)
